@@ -23,19 +23,19 @@ import android.cts.statsdatom.lib.ConfigUtils;
 import android.cts.statsdatom.lib.DeviceUtils;
 import android.cts.statsdatom.lib.ReportUtils;
 
+import com.android.compatibility.common.util.NonApiTest;
 import com.android.os.AtomsProto;
 import com.android.os.AtomsProto.SizeCompatRestartButtonEventReported;
 import com.android.os.AtomsProto.SizeCompatRestartButtonEventReported.Event;
 import com.android.os.StatsLog;
 import com.android.tradefed.build.IBuildInfo;
-import com.android.tradefed.device.ITestDevice;
-import com.android.tradefed.log.LogUtil.CLog;
 import com.android.tradefed.testtype.DeviceTestCase;
 import com.android.tradefed.testtype.IBuildReceiver;
-import com.android.tradefed.util.Pair;
 import com.android.tradefed.util.RunUtil;
 
 import java.util.List;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 /**
  * This test is for making sure that Size Compat Restart Button appearances and clicks log the
@@ -44,24 +44,23 @@ import java.util.List;
  *  <p>Build/Install/Run:
  *  atest CtsStatsdAtomHostTestCases:SizeCompatRestartButtonStatsTests
  */
-// TODO(b/197223993): add test for clicked event
+@NonApiTest(exemptionReasons = {}, justification = "METRIC")
 public class SizeCompatRestartButtonStatsTests extends DeviceTestCase implements IBuildReceiver {
 
-    private static final String NON_RESIZEABLE_PORTRAIT_ACTIVITY =
-            "StatsdCtsNonResizeablePortraitActivity";
     private static final String CMD_GET_STAY_ON = "settings get global stay_on_while_plugged_in";
     private static final String CMD_PUT_STAY_ON_TEMPLATE =
-            "settings put global stay_on_while_plugged_in %d";
+            "settings put global stay_on_while_plugged_in ";
+    private static final String WM_SET_IGNORE_ORIENTATION_REQUEST =
+            "wm set-ignore-orientation-request ";
+    private static final String WM_GET_IGNORE_ORIENTATION_REQUEST =
+            "wm get-ignore-orientation-request";
+    private static final Pattern IGNORE_ORIENTATION_REQUEST_PATTERN =
+            Pattern.compile("ignoreOrientationRequest (true|false) for displayId=\\d+");
     private static final int ENABLE_STAY_ON_CODE = 7;
-    private static final String CMD_RESET_DEVICE_STATE = "cmd device_state state reset";
-    private static final String CMD_PUT_DEVICE_STATE_TEMPLATE = "cmd device_state state %d";
-    private static final String CMD_GET_CURRENT_DEVICE_STATE = "cmd device_state print-state";
-    private static final int DEVICE_STATE_CLOSED = 0;
-    private static final int DEVICE_STATE_OPENED = 2;
 
     private IBuildInfo mCtsBuild;
     private long mOriginalStayOnSetting;
-    private int mOriginalDeviceState;
+    private boolean mInitialIgnoreOrientationRequest;
 
     @Override
     protected void setUp() throws Exception {
@@ -69,14 +68,17 @@ public class SizeCompatRestartButtonStatsTests extends DeviceTestCase implements
         assertThat(mCtsBuild).isNotNull();
         mOriginalStayOnSetting = Long.parseLong(
                 getDevice().executeShellCommand(CMD_GET_STAY_ON).trim());
-        mOriginalDeviceState = Integer.parseInt(
-                getDevice().executeShellCommand(CMD_GET_CURRENT_DEVICE_STATE).trim());
-        getDevice().executeShellCommand(
-                String.format(CMD_PUT_STAY_ON_TEMPLATE, ENABLE_STAY_ON_CODE));
-        getDevice().executeShellCommand(
-                String.format(CMD_PUT_DEVICE_STATE_TEMPLATE, DEVICE_STATE_CLOSED));
+        Matcher matcher = IGNORE_ORIENTATION_REQUEST_PATTERN.matcher(
+                getDevice().executeShellCommand(WM_GET_IGNORE_ORIENTATION_REQUEST));
+        assertTrue("get-ignore-orientation-request should match pattern",
+                matcher.find());
+        mInitialIgnoreOrientationRequest = Boolean.parseBoolean(matcher.group(1));
+
         ConfigUtils.removeConfig(getDevice());
         ReportUtils.clearReports(getDevice());
+        getDevice().executeShellCommand(CMD_PUT_STAY_ON_TEMPLATE + ENABLE_STAY_ON_CODE);
+
+        getDevice().executeShellCommand(WM_SET_IGNORE_ORIENTATION_REQUEST + "true");
         DeviceUtils.installStatsdTestApp(getDevice(), mCtsBuild);
         DeviceUtils.turnScreenOn(getDevice());
         RunUtil.getDefault().sleep(AtomTestUtils.WAIT_TIME_LONG);
@@ -87,11 +89,9 @@ public class SizeCompatRestartButtonStatsTests extends DeviceTestCase implements
 
     @Override
     protected void tearDown() throws Exception {
+        getDevice().executeShellCommand(CMD_PUT_STAY_ON_TEMPLATE + mOriginalStayOnSetting);
         getDevice().executeShellCommand(
-                String.format(CMD_PUT_STAY_ON_TEMPLATE, mOriginalStayOnSetting));
-        getDevice().executeShellCommand(
-                String.format(CMD_PUT_DEVICE_STATE_TEMPLATE, mOriginalDeviceState));
-        getDevice().executeShellCommand(CMD_RESET_DEVICE_STATE);
+                WM_SET_IGNORE_ORIENTATION_REQUEST + mInitialIgnoreOrientationRequest);
         ConfigUtils.removeConfig(getDevice());
         ReportUtils.clearReports(getDevice());
         DeviceUtils.uninstallStatsdTestApp(getDevice());
@@ -103,71 +103,27 @@ public class SizeCompatRestartButtonStatsTests extends DeviceTestCase implements
         mCtsBuild = buildInfo;
     }
 
-    public void testSizeCompatRestartButtonAppearedButNotClicked() throws Exception {
-        if (!isFoldableStateAvailable(DEVICE_STATE_OPENED)
-                || !isFoldableStateAvailable(DEVICE_STATE_CLOSED)) {
-            CLog.i("Device doesn't support OPENED or CLOSED device states.");
-            return;
-        }
+    public void testSizeCompatRestartButtonAppearedAndClicked() throws Exception {
+        DeviceUtils.runDeviceTestsOnStatsdApp(getDevice(), ".appcompat.AppCompatTests",
+                "testClickSizeCompatRestartButton");
 
-        Pair<Integer, Integer> displaySizeClosed = getDisplayRealSize(getDevice());
-        if (displaySizeClosed == null) {
-            CLog.i("Could not determine display size while CLOSED.");
-            return;
-        }
-        try (AutoCloseable a = DeviceUtils.withActivity(getDevice(),
-                DeviceUtils.STATSD_ATOM_TEST_PKG, NON_RESIZEABLE_PORTRAIT_ACTIVITY, "action",
-                "action.sleep_top")) {
-            // Wait before unfolding to make sure app is opened.
-            RunUtil.getDefault().sleep(AtomTestUtils.WAIT_TIME_LONG);
-            getDevice().executeShellCommand(
-                    String.format(CMD_PUT_DEVICE_STATE_TEMPLATE, DEVICE_STATE_OPENED));
-            RunUtil.getDefault().sleep(AtomTestUtils.WAIT_TIME_LONG);
-        }
-
-        Pair<Integer, Integer> displaySizeOpened = getDisplayRealSize(getDevice());
-        if (displaySizeOpened == null) {
-            CLog.i("Could not determine display size while OPENED.");
-            return;
-        }
-        if (displaySizeClosed.equals(displaySizeOpened)) {
-            CLog.i("Display size has not changed.");
-            return;
-        }
         // Wait to make sure metric event is reported.
         RunUtil.getDefault().sleep(AtomTestUtils.WAIT_TIME_LONG);
         List<StatsLog.EventMetricData> data = ReportUtils.getEventMetricDataList(getDevice());
-        assertThat(data.size()).isEqualTo(1);
+        assertThat(data.size()).isAtLeast(1);
 
         SizeCompatRestartButtonEventReported atom =
-                data.get(0).getAtom().getSizeCompatRestartButtonEventReported();
+                data.getFirst().getAtom().getSizeCompatRestartButtonEventReported();
         assertThat(atom.getUid()).isEqualTo(DeviceUtils.getStatsdTestAppUid(getDevice()));
         assertThat(atom.getEvent()).isEqualTo(Event.APPEARED);
-    }
 
-    private boolean isFoldableStateAvailable(int state) throws Exception {
-        return getDevice().getFoldableStates().stream().anyMatch(
-                foldableState -> foldableState.getIdentifier() == state);
-    }
-
-    /**
-     * Returns the physical size of the current display used.
-     */
-    private Pair<Integer, Integer> getDisplayRealSize(ITestDevice device) throws Exception {
-        final String physicalSize = "Physical size: ";
-        String str = device.executeShellCommand("wm size");
-        if (!str.isEmpty()) {
-            String[] lines = str.split(System.getProperty("line.separator"));
-            for (String s : lines) {
-                if (s.contains(physicalSize)) {
-                    String substring = s.substring(physicalSize.length());
-                    if (!substring.isEmpty()) {
-                        return Pair.create(Integer.parseInt(substring.split("x")[0]),
-                                Integer.parseInt(substring.split("x")[1]));
-                    }
-                }
-            }
+        // Can't enforce size compat restart button to exist.
+        if (data.size() < 2) {
+            return;
         }
-        return null;
+
+        atom = data.get(1).getAtom().getSizeCompatRestartButtonEventReported();
+        assertThat(atom.getUid()).isEqualTo(DeviceUtils.getStatsdTestAppUid(getDevice()));
+        assertThat(atom.getEvent()).isEqualTo(Event.CLICKED);
     }
 }
